gl31-master/src/test/deca/context/valid/sansobjet/affect_float_float.deca
// Description:
//    Affectation et typage : associe un float a un float
//
// Resultats:
//    Ligne 15: Affectation de types compatibles
//
// Historique:
//    cree le 08/01/2021

{
   float a;
   float b;

   // Doit etre accepte.
   a = b;
}
