gl31-master/src/test/deca/context/invalid/sansobjet/affect_float_void.deca
// Description:
//    Affectation et typage : associe un float a un void
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 08/01/2021

{
   void a;
   float b;

   // Doit etre refuse.
   a = b;
}
